# Elektronik-Labor-

./: README.md  labor1.py  labor1_messungen.py  labor1_simulation.py  labor2.py  labor2_messungen_einzel.py  labor2_simulation.py  labor3_messungen.py  labor3_messungen_1Diagramm.py  labor4_simulation.py  pyproject.toml  scope_4.csv  scope_6.csv  test.py
data/: C_Messung_Dreieck_PosOnly_realistisch_noisy_1Vpp_1kHz.csv  C_Messung_Positive_Puls_1kHz_realistisch.csv  C_Messung_Rechteck_realistisch_noisy_bipolar_1Vpp_1kHz.csv  C_Messung_Spannung_C_KORREKT.csv  C_Messung_Spannung_L_KORREKT.csv  Labor_15_5_25.txt  lab2_RC first oder lowpass simulation.txt  lab2_RCL second order lowpass.txt  lab2_RCx2 first oder lowpass simulation.txt  labor3_mitC3.txt  labor3_ohneC3.txt  labor3_ohneC3_clean.csv  scope_3.csv  scope_4.csv  scope_5.csv  scope_6.csv  scope_7.csv
